--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPS+R1rmWrGeruAhxTB8Uqf",
+      "authorship_tag": "ABX9TyNcxPI574XB9+5UKwUZNWBd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "QNWYeqdKnhVO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QNWYeqdKnhVO",
+        "outputId": "e9b8b53c-b145-4d31-9b18-541c4d2c6974"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ]
+        }
+      ],
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
@@ -44,10 +56,22 @@
         "%cd gdrive/MyDrive/Colab\\ Notebooks/HW3_Full"
       ],
       "metadata": {
-        "id": "pDJGDTrhn-yQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pDJGDTrhn-yQ",
+        "outputId": "4ef22170-b3db-4373-b6c8-6c758921076e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/gdrive/MyDrive/Colab Notebooks/HW3_Full\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -55,15 +79,48 @@
         "! pip install torch_utils"
       ],
       "metadata": {
-        "id": "BfLDM6X4p8MA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BfLDM6X4p8MA",
+        "outputId": "db5968f7-eb75-4d03-ca07-f449161233ea"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting torch_utils\n",
+            "  Downloading torch-utils-0.1.2.tar.gz (4.9 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: torch in /usr/local/lib/python3.9/dist-packages (from torch_utils) (2.0.0+cu118)\n",
+            "Requirement already satisfied: triton==2.0.0 in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (2.0.0)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (4.5.0)\n",
+            "Requirement already satisfied: networkx in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (3.0)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (3.1.2)\n",
+            "Requirement already satisfied: sympy in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (1.11.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (3.10.7)\n",
+            "Requirement already satisfied: lit in /usr/local/lib/python3.9/dist-packages (from triton==2.0.0->torch->torch_utils) (16.0.0)\n",
+            "Requirement already satisfied: cmake in /usr/local/lib/python3.9/dist-packages (from triton==2.0.0->torch->torch_utils) (3.25.2)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.9/dist-packages (from jinja2->torch->torch_utils) (2.1.2)\n",
+            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.9/dist-packages (from sympy->torch->torch_utils) (1.3.0)\n",
+            "Building wheels for collected packages: torch_utils\n",
+            "  Building wheel for torch_utils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for torch_utils: filename=torch_utils-0.1.2-py3-none-any.whl size=6202 sha256=b7823c8d3a541ad42da9a53cf7e91630bd4760d1f77ce5b274767e647a9f8aec\n",
+            "  Stored in directory: /root/.cache/pip/wheels/b9/ae/b4/56ed29da706ea5e0f79157a9b158aad24bfabd045ef42eed75\n",
+            "Successfully built torch_utils\n",
+            "Installing collected packages: torch_utils\n",
+            "Successfully installed torch_utils-0.1.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "from IPython.core.interactiveshell import InteractiveShel\n",
+        "from IPython.core.interactiveshell import InteractiveShell\n",
         "InteractiveShell.ast_node_interactivity = \"all\"\n",
         "\n",
         "# import modules\n",
@@ -73,7 +130,7 @@
         "import torch\n",
         "from torch import cuda\n",
         "import torch.nn as nn\n",
-        "from torch.utils.data import TensorDataset, DataLoader, s\n",
+        "from torch.utils.data import TensorDataset, DataLoader, sampler\n",
         "import torch.nn.functional as F\n",
         "from torch_utils import AverageMeter\n",
         "import math\n",
@@ -109,6 +166,41 @@
       ],
       "metadata": {
         "id": "Eqi18g4gqOCp"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define model\n",
+        "class bmodel(nn.Module):\n",
+        "    def __init__(self, input_d, hidden_d, output_d):\n",
+        "        super().__init__()\n",
+        "        # Define all the layers that you need in your network\n",
+        "        # You can use nn.Linear() to define the linear layer\n",
+        "        # You can use nn.Dropout() to define the dropout layer\n",
+        "        # You can use F.relu() to define your ReLu layer\n",
+        "        ######################\n",
+        "        ### YOUR CODE HERE ###\n",
+        "        ######################\n",
+        "        \n",
+        "        #####################\n",
+        "        ### YOUR CODE END ###\n",
+        "        #####################\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        # Design your network structure here\n",
+        "        ######################\n",
+        "        ### YOUR CODE HERE ###\n",
+        "        ######################\n",
+        "        \n",
+        "        #####################\n",
+        "        ### YOUR CODE END ###\n",
+        "        #####################\n"
+      ],
+      "metadata": {
+        "id": "lp5BBLAOq_TP"
       },
       "execution_count": null,
       "outputs": []
