--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcxPI574XB9+5UKwUZNWBd",
+      "authorship_tag": "ABX9TyPQDmw7Uv/G+TINao451DZC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,28 +181,68 @@
         "        # You can use nn.Linear() to define the linear layer\n",
         "        # You can use nn.Dropout() to define the dropout layer\n",
         "        # You can use F.relu() to define your ReLu layer\n",
-        "        ######################\n",
-        "        ### YOUR CODE HERE ###\n",
-        "        ######################\n",
+        "       # Weights and biases can be create using nn.Parameter, which has requires_grad\n",
         "        \n",
-        "        #####################\n",
-        "        ### YOUR CODE END ###\n",
-        "        #####################\n",
+        "        self.w00 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        self.b00 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        # num of ws = num of inputs\n",
+        "        # num of bs = 1 for each neuron\n",
+        "        self.w01 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        self.b01 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "                \n",
+        "        self.w10 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        self.w11 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        self.b10 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
         "\n",
         "    def forward(self, x):\n",
         "        # Design your network structure here\n",
-        "        ######################\n",
-        "        ### YOUR CODE HERE ###\n",
-        "        ######################\n",
-        "        \n",
-        "        #####################\n",
-        "        ### YOUR CODE END ###\n",
-        "        #####################\n"
+        "          h00 = x * self.w00 + self.b00\n",
+        "          h00_out = F.relu(h00)\n",
+        "   \n",
+        "          h01 = x * self.w01 + self.b01\n",
+        "          h01_out = F.relu(h01)\n",
+        "          h1 = h00_out * self.w10 + h01_out * self.w11 + self.b10\n",
+        "   \n",
+        "   # Since the model is binary classification, we apply sigmoid\n",
+        "          output = torch.sigmoid(h1)\n",
+        "   \n",
+        "          return output\n"
       ],
       "metadata": {
         "id": "lp5BBLAOq_TP"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a small net and some toy data to check your implementations.\n",
+        "# Note that we set the random seed for repeatable experiments.\n",
+        "\n",
+        "input_size = 4\n",
+        "hidden_size = 10\n",
+        "num_classes = 3\n",
+        "num_inputs = 5\n",
+        "\n",
+        "def init_toy_model():\n",
+        "    np.random.seed(0)\n",
+        "    return bmodel(input_size, hidden_size, num_classes)\n",
+        "\n",
+        "def init_toy_data():\n",
+        "    np.random.seed(1)\n",
+        "    X = 10 * np.random.randn(num_inputs, input_size)\n",
+        "    y = np.array([0, 1, 2, 2, 1])\n",
+        "    return X, y\n",
+        "\n",
+        "toy_model = init_toy_model()\n",
+        "train_X, train_Y = init_toy_data()\n",
+        "validation_X, validation_Y = init_toy_data()"
+      ],
+      "metadata": {
+        "id": "4oGc0V_G6x3E"
+      },
+      "execution_count": 7,
       "outputs": []
     }
   ]
