--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQDmw7Uv/G+TINao451DZC",
+      "authorship_tag": "ABX9TyO2nE56iirp3L6RfauNuDOk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +13,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -243,6 +245,156 @@
         "id": "4oGc0V_G6x3E"
       },
       "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check whether there is a gpu for cuda\n",
+        "import torch\n",
+        "train_on_gpu = torch.cuda.is_available()\n",
+        "print(f'Train on gpu: {train_on_gpu}')\n",
+        "\n",
+        "# Number of gpus\n",
+        "if train_on_gpu:\n",
+        "    gpu_count = torch.cuda.device_count()\n",
+        "    print(f'{gpu_count} gpus detected.')\n",
+        "    if gpu_count > 1:\n",
+        "        multi_gpu = True\n",
+        "    else:\n",
+        "        multi_gpu = False\n",
+        "else:\n",
+        "    multi_gpu = False\n",
+        "print(train_on_gpu,multi_gpu)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m1gmvpdB7dod",
+        "outputId": "e0f283f4-a45e-49d6-d291-c9ebd3121a87"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train on gpu: True\n",
+            "1 gpus detected.\n",
+            "True False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "# torch.linspace() creates the sequence of numbers between start and end, inclusively\n",
+        "toy_inputs = torch.linspace(start=100000, end=500000, steps=10) # same # of inputs\n",
+        "# [100000, 150000, ... 500000]\n",
+        "toy_labels = torch.tensor([0., 0., 0., 1., 1., 0., 1., 1., 1., 1.]) # same # of outputs\n",
+        "\n",
+        "\n",
+        "################################################################################################################ \n",
+        "# TODO: Uncomment code below to see the effect of feature scaling!\n",
+        "# X_mean = torch.mean(toy_inputs, dim=0) # Compute the mean of each feature across all samples\n",
+        "# X_std = torch.std(toy_inputs, dim=0) # Compute the standard deviation of each feature across all samples\n",
+        "\n",
+        "# # Normalize the inputs using the mean and standard deviation\n",
+        "# toy_inputs = (toy_inputs - X_mean) / X_std\n",
+        "################################################################################################################ \n",
+        "\n",
+        "\n",
+        "# create the ToyModel\n",
+        "model = ToyModel()\n",
+        "\n",
+        "optimizer = SGD(model.parameters(), lr=0.05)\n",
+        "criterion = nn.BCEWithLogitsLoss()\n",
+        "\n",
+        "previous_total_loss = 0\n",
+        "for epoch in range(100):\n",
+        "\n",
+        "    total_loss = 0\n",
+        "    \n",
+        "    # going through my inputs\n",
+        "    for iteration in range(len(toy_inputs)):\n",
+        "        \n",
+        "        input_i = toy_inputs[iteration]  # x\n",
+        "        label_i = toy_inputs[iteration]  # y\n",
+        "        \n",
+        "        # 1 - forward pass\n",
+        "        output_i = model(input_i) ## calculate the neural network output for one input\n",
+        "        \n",
+        "        # 2 - compute loss\n",
+        "        loss = criterion(output_i.squeeze(), label_i)\n",
+        "\n",
+        "        # 3 - backprop\n",
+        "        loss.backward() # calculates the gradient for a single value and adds it to the previous one\n",
+        "        \n",
+        "        total_loss += float(loss.item()) # add the total loss for this epoch.\n",
+        "        \n",
+        "    # early stopping\n",
+        "    if (total_loss < 0.5):\n",
+        "        print(\"Epoch #\" + str(epoch))\n",
+        "        break\n",
+        "      \n",
+        "    optimizer.step() # update the parameters\n",
+        "    optimizer.zero_grad() # zero out the previous gradient\n",
+        "    \n",
+        "\n",
+        "    print(\"Total loss: \" + str(total_loss))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "id": "pPRUG4WeMwYG",
+        "outputId": "be878374-3233-4460-ce88-64b20d51c4cc"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-0daaf8fb1ecc>\u001b[0m in \u001b[0;36m<cell line: 19>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;31m# create the ToyModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mToyModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.05\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'ToyModel' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Datasets organization\n",
+        "batch_size = 1\n",
+        "\n",
+        "# Transfer the data from numpy to tensor\n",
+        "data = {\n",
+        "    'train':\n",
+        "    TensorDataset(torch.from_numpy(train_X), torch.from_numpy(train_Y).float()),\n",
+        "    'valid':\n",
+        "    # please define your validation dataset\n",
+        "    ######################\n",
+        "    ### YOUR CODE HERE ###\n",
+        "    ######################\n",
+        "    \n",
+        "    #####################\n",
+        "    ### YOUR CODE END ###\n",
+        "    #####################\n",
+        "\n",
+        "}\n"
+      ],
+      "metadata": {
+        "id": "28QP34jw-F8N"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
