--- a/HW3.ipynb
+++ b/HW3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxoRD77yCQ44j1bDK3acSU",
+      "authorship_tag": "ABX9TyNjEH1FrcMCSLjqocpcYjz/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -594,6 +594,66 @@
     {
       "cell_type": "code",
       "source": [
+        "class ToyModel(nn.Module):\n",
+        "\n",
+        "    def __init__(self): \n",
+        "        \n",
+        "        super().__init__() # initializes the parent class\n",
+        "        \n",
+        "        # Weights and biases can be create using nn.Parameter, which has requires_grad\n",
+        "        \n",
+        "        self.w00 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        self.b00 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "\n",
+        "        # num of ws = num of inputs\n",
+        "        # num of bs = 1 for each neuron\n",
+        "        self.w01 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        self.b01 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        \n",
+        "        self.w10 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        self.w11 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "        self.b10 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
+        "\n",
+        "        \n",
+        "    def forward(self, x): \n",
+        "        \n",
+        "        h00 = x * self.w00 + self.b00\n",
+        "        h00_out = F.relu(h00)\n",
+        "        \n",
+        "        h01 = x * self.w01 + self.b01\n",
+        "        h01_out = F.relu(h01)\n",
+        "\n",
+        "        h1 = h00_out * self.w10 + h01_out * self.w11 + self.b10\n",
+        "        \n",
+        "        # Since the model is binary classification, we apply sigmoid\n",
+        "        output = torch.sigmoid(h1)\n",
+        "        \n",
+        "    \n",
+        "        return output"
+      ],
+      "metadata": {
+        "id": "rIlnKgVHHVEu"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch \n",
+        "import torch.nn as nn \n",
+        "import torch.nn.functional as F \n",
+        "from torch.optim import SGD \n"
+      ],
+      "metadata": {
+        "id": "mdRG7hkNIRfK"
+      },
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# torch.linspace() creates the sequence of numbers between start and end, inclusively\n",
         "toy_inputs = torch.linspace(start=100000, end=500000, steps=10) # same # of inputs\n",
         "# [100000, 150000, ... 500000]\n",
@@ -611,9 +671,9 @@
         "\n",
         "\n",
         "# create the ToyModel\n",
-        "model = init_toy_model()\n",
+        "model =  ToyModel()\n",
         "\n",
-        "optimizer = torch.optim.SGD(model.parameters(), lr=0.05)\n",
+        "optimizer = SGD(model.parameters(), lr=0.05)\n",
         "criterion = nn.BCEWithLogitsLoss()\n",
         "\n",
         "previous_total_loss = 0\n",
@@ -654,15 +714,114 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vv2rWUjOGA_W",
-        "outputId": "33135c52-be1d-4dfb-84e2-cc41e88f8b85"
+        "outputId": "c5bf08ea-fbd6-44c3-ee92-4ed720100827"
       },
-      "execution_count": 36,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch #0\n"
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n",
+            "Total loss: 6.931471824645996\n"
           ]
         }
       ]
