--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8VDnLwM3ztKH1gzBr75by",
+      "authorship_tag": "ABX9TyNK1kQZou2BEHBt09ccRdr5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%cd gdrive/MyDrive/Colab\\ Notebooks/HW3_Full"
+        "%cd gdrive/MyDrive/Colab\\ Notebooks/HW4"
       ],
       "metadata": {
         "colab": {
@@ -85,36 +85,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BfLDM6X4p8MA",
-        "outputId": "c2f5dff4-1568-4bf9-f4a7-14ae1cb48efe"
+        "outputId": "e2eecc37-4738-49a0-d829-4b6b869614e2"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting torch_utils\n",
-            "  Downloading torch-utils-0.1.2.tar.gz (4.9 kB)\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: torch_utils in /usr/local/lib/python3.9/dist-packages (0.1.2)\n",
             "Requirement already satisfied: torch in /usr/local/lib/python3.9/dist-packages (from torch_utils) (2.0.0+cu118)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (3.1)\n",
             "Requirement already satisfied: triton==2.0.0 in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (2.0.0)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (3.11.0)\n",
+            "Requirement already satisfied: networkx in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (3.1)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (4.5.0)\n",
             "Requirement already satisfied: sympy in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (1.11.1)\n",
             "Requirement already satisfied: jinja2 in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (3.1.2)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (3.11.0)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from torch->torch_utils) (4.5.0)\n",
             "Requirement already satisfied: cmake in /usr/local/lib/python3.9/dist-packages (from triton==2.0.0->torch->torch_utils) (3.25.2)\n",
             "Requirement already satisfied: lit in /usr/local/lib/python3.9/dist-packages (from triton==2.0.0->torch->torch_utils) (16.0.1)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.9/dist-packages (from jinja2->torch->torch_utils) (2.1.2)\n",
-            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.9/dist-packages (from sympy->torch->torch_utils) (1.3.0)\n",
-            "Building wheels for collected packages: torch_utils\n",
-            "  Building wheel for torch_utils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for torch_utils: filename=torch_utils-0.1.2-py3-none-any.whl size=6202 sha256=4d29f337cba351a0ff6488c5d9bf78d7b8eb6b4e80ab079e5dc03f5114f1dc25\n",
-            "  Stored in directory: /root/.cache/pip/wheels/b9/ae/b4/56ed29da706ea5e0f79157a9b158aad24bfabd045ef42eed75\n",
-            "Successfully built torch_utils\n",
-            "Installing collected packages: torch_utils\n",
-            "Successfully installed torch_utils-0.1.2\n"
+            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.9/dist-packages (from sympy->torch->torch_utils) (1.3.0)\n"
           ]
         }
       ]
@@ -139,7 +130,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.metrics import mean_squared_error\n",
         "from numpy import inf\n",
-        "\n",
+        "import torchvision\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "import os\n",
@@ -149,7 +140,6 @@
         "from torchvision import models\n",
         "from torch import optim, cuda, Tensor\n",
         "import tqdm\n",
-        "from torch.utils.data import Dataset, DataLoader\n",
         "\n",
         "# Data science tools\n",
         "import numpy as np\n",
@@ -170,7 +160,7 @@
       "metadata": {
         "id": "Eqi18g4gqOCp"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -216,6 +206,76 @@
         "id": "lp5BBLAOq_TP"
       },
       "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# define model\n",
+        "class bmodel(nn.Module):\n",
+        "    def __init__(self,num_classes=10):\n",
+        "        super(bmodel, self).__init__()\n",
+        "        self.layer1 = nn.Sequential(\n",
+        "            # 28x28x1 => 28x28x32\n",
+        "            nn.Conv2d(in_channels=1,\n",
+        "                      out_channels=32,\n",
+        "                      kernel_size=(3, 3),\n",
+        "                      stride=(1, 1),\n",
+        "                      padding=1), # (1(28-1) - 28 + 3) / 2 = 1\n",
+        "            nn.ReLU(),\n",
+        "            # 28x28x32 => 14x14x32\n",
+        "            nn.MaxPool2d(kernel_size=(2, 2),\n",
+        "                         stride=(2, 2),\n",
+        "                         padding=0)) # (2(14-1) - 28 + 2) = 0    \n",
+        "        self.layer2 = nn.Sequential(\n",
+        "            # 14x14x32 => 14x14x64\n",
+        "            nn.Conv2d(in_channels=32,\n",
+        "                      out_channels=64,\n",
+        "                      kernel_size=(3, 3),\n",
+        "                      stride=(1, 1),\n",
+        "                      padding=1), # (1(14-1) - 14 + 3) / 2 = 1   \n",
+        "            nn.ReLU(),\n",
+        "            # 14x14x64 => 7x7x64\n",
+        "            nn.MaxPool2d(kernel_size=(2, 2),\n",
+        "                         stride=(2, 2),\n",
+        "                         padding=0)) # (2(7-1) - 14 + 2) = 0\n",
+        "        self.linear_1 = nn.Linear(7*7*64, num_classes)\n",
+        "\n",
+        "        # Define all the layers that you need in your network\n",
+        "        # You can use nn.Conv2d() to define the 2d convolutional layer\n",
+        "        # You can use nn.MaxPool2d() to define the 2d maxpooling layer\n",
+        "        # You can use nn.Linear() to define the linear layer\n",
+        "        # You can use F.relu() to define your ReLu layer\n",
+        "        #####################\n",
+        "        ### YOUR CODE HERE###\n",
+        "        #####################\n",
+        "\n",
+        "        ####################\n",
+        "        ### YOUR CODE END###\n",
+        "        ####################\n",
+        "    def forward(self, x):\n",
+        "        out = self.layer1(x)\n",
+        "        out = self.layer2(out)\n",
+        "        out = out.reshape(out.size(0), -1)\n",
+        "        logits = self.linear_1(out.view(-1, 7*7*64))\n",
+        "        probas = F.softmax(logits, dim=1)\n",
+        "        return logits, probas\n",
+        "        # You may use x.view() to reshape the tensor.\n",
+        "        #####################\n",
+        "        ### YOUR CODE HERE###\n",
+        "        #####################\n",
+        "\n",
+        "        ####################\n",
+        "        ### YOUR CODE END###\n",
+        "        ####################\n",
+        "  \n",
+        "model = bmodel()"
+      ],
+      "metadata": {
+        "id": "P3cZUvuZ-SE_"
+      },
+      "execution_count": 10,
       "outputs": []
     },
     {
