--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -22,8 +22,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/gdrive\n"
           ]
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -46,8 +46,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/gdrive/MyDrive/Colab Notebooks/HW4\n"
           ]
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,8 +69,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting torch_utils\n",
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "Eqi18g4gqOCp"
       },
@@ -156,52 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "lp5BBLAOq_TP"
-      },
-      "outputs": [],
-      "source": [
-        "# define model\n",
-        "class bmodel(nn.Module):\n",
-        "    def __init__(self, input_d, hidden_d, output_d, train=True):\n",
-        "        super().__init__()\n",
-        "        # Define all the layers that you need in your network\n",
-        "        # You can use nn.Linear() to define the linear layer\n",
-        "        # You can use nn.Dropout() to define the dropout layer\n",
-        "        # You can use F.relu() to define your ReLu layer\n",
-        "       # Weights and biases can be create using nn.Parameter, which has requires_grad\n",
-        "       \n",
-        "        self.w00 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
-        "        self.b00 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
-        "        # num of ws = num of inputs\n",
-        "        # num of bs = 1 for each neuron\n",
-        "        self.w01 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
-        "        self.b01 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
-        "                \n",
-        "        self.w10 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
-        "        self.w11 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
-        "        self.b10 = nn.Parameter(torch.randn(1), requires_grad=True)\n",
-        "        self.double()\n",
-        "\n",
-        "    def forward(self, x):\n",
-        "        # Design your network structure here\n",
-        "          h00 = x * self.w00 + self.b00\n",
-        "          h00_out = F.relu(h00)\n",
-        "   \n",
-        "          h01 = x * self.w01 + self.b01\n",
-        "          h01_out = F.relu(h01)\n",
-        "          h1 = h00_out * self.w10 + h01_out * self.w11 + self.b10\n",
-        "   \n",
-        "   # Since the model is binary classification, we apply sigmoid\n",
-        "          output = torch.sigmoid(h1)\n",
-        "   \n",
-        "          return output\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "P3cZUvuZ-SE_"
       },
@@ -212,6 +167,14 @@
         "class bmodel(nn.Module):\n",
         "    def __init__(self,num_classes=10):\n",
         "        super(bmodel, self).__init__()\n",
+        "      \n",
+        "\n",
+        "        # Define all the layers that you need in your network\n",
+        "        # You can use nn.Conv2d() to define the 2d convolutional layer\n",
+        "        # You can use nn.MaxPool2d() to define the 2d maxpooling layer\n",
+        "        # You can use nn.Linear() to define the linear layer\n",
+        "        # You can use F.relu() to define your ReLu layer\n",
+        "       \n",
         "        self.layer1 = nn.Sequential(\n",
         "            # 28x28x1 => 28x28x32\n",
         "            nn.Conv2d(in_channels=1,\n",
@@ -238,15 +201,6 @@
         "                         padding=0)) # (2(7-1) - 14 + 2) = 0\n",
         "        self.linear_1 = nn.Linear(7*7*64, num_classes)\n",
         "\n",
-        "        # Define all the layers that you need in your network\n",
-        "        # You can use nn.Conv2d() to define the 2d convolutional layer\n",
-        "        # You can use nn.MaxPool2d() to define the 2d maxpooling layer\n",
-        "        # You can use nn.Linear() to define the linear layer\n",
-        "        # You can use F.relu() to define your ReLu layer\n",
-        "        #####################\n",
-        "        ### YOUR CODE HERE###\n",
-        "        #####################\n",
-        "\n",
         "        ####################\n",
         "        ### YOUR CODE END###\n",
         "        ####################\n",
@@ -265,15 +219,15 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "background_save": true
         },
         "id": "3YML3vrACtx8",
-        "outputId": "4bd36ad8-840e-4809-f1cd-52cf25e9dd13"
+        "outputId": "b5c4b4e6-2f81-4323-9b2f-1b3d46f7a012"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "ERROR:root:Internal Python error in the inspect module.\n",
             "Below is the traceback from this internal error.\n",
@@ -287,8 +241,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Traceback (most recent call last):\n",
             "  File \"/usr/local/lib/python3.9/dist-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
@@ -572,9 +526,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from ./HW4_modules import data_utils"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -583,16 +535,18 @@
         "id": "oaljEPId0gMx",
         "outputId": "574c22c2-f0b6-418b-f6fd-59f3079a4b88"
       },
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-986bf5079ef3>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    from ./HW4_modules import data_utils\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
+      ],
+      "source": [
+        "from ./HW4_modules import data_utils"
       ]
     },
     {
@@ -1153,7 +1107,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+gAyz40MU7FuAFLagjD22",
+      "authorship_tag": "ABX9TyPhrxM/VPSSf4CFNxxX4wuj",
       "include_colab_link": true
     },
     "gpuClass": "standard",
