--- a/census_income_classification.ipynb
+++ b/census_income_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMu+YYz93g5OgXnVJxteFDO",
+      "authorship_tag": "ABX9TyMn39fkW+JiIfc39jbImR8s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,26 @@
       ],
       "metadata": {
         "id": "-aQcHut2x_lR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This notebook demonstrates the usage of binary regression model  for Machine Learning in Python."
+      ],
+      "metadata": {
+        "id": "oDGjoQHHYEwb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Problem Formulation\n",
+        "In this example,This Income data set across US population was extracted from the census bureau database. There are 48842 instances of data set, mix of continuous and discrete values.\n",
+        "The data set has 15 attribute which include age, sex, education level and other relevant details of a person. The data set will be used in Exploratory Data Analysis towards implementing Binary Classification Models to predict whether a person's income will be greater or less than 50K.\n"
+      ],
+      "metadata": {
+        "id": "dC_Juug_Yheh"
       }
     }
   ]
